--- a/www/static/template/shop_onserver/about.html
+++ b/www/static/template/shop_onserver/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>About</title>
+	<title>关于我们</title>
 	<!-- responsive meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- For IE -->
@@ -142,11 +142,11 @@
                     </div>
                     <div class="navbar-collapse collapse clearfix">
                         <ul class="navigation clearfix">
-                            <li><a href="index.html">Home</a></li>
+                            <li><a href="index.html">网站首页</a></li>
                             <li><a href="services.html">Services</a></li>
                             <li class="dropdown current"><a href="about.html">Pages</a>
                                 <ul>
-                                    <li><a href="about.html">About Us</a></li>
+                                    <li><a href="about.html">关于我们 Us</a></li>
                                     <li><a href="team.html">Meet Our Team</a></li>
                                     <li><a href="faq.html">FAQ’s</a></li>
                                     <li><a href="faq-single.html">FAQ's Single</a></li>
@@ -164,8 +164,8 @@
                                     <li><a href="account.html">My Account</a></li>
                                 </ul>
                             </li>
-                            <li><a href="blog.html">Blog</a></li>
-                            <li><a href="contact.html">Contact Us</a></li>
+                            <li><a href="blog.html">行业动态</a></li>
+                            <li><a href="contact.html">联系我们</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -201,7 +201,7 @@
 <!--Start breadcrumb area-->
 <section class="breadcrumb-area">
 	<div class="container text-center">
-		<h1>About Us</h1>
+		<h1>关于我们 Us</h1>
 	</div>
 </section>
 <!--End breadcrumb area-->
@@ -211,9 +211,9 @@
     <div class="container">
         <div class="left pull-left">
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">网站首页</a></li>
                 <li><i class="fa fa-caret-right" aria-hidden="true"></i></li>
-                <li>About Us</li>
+                <li>关于我们 Us</li>
             </ul>
         </div>
         <div class="right pull-right">
