--- a/www/static/template/shop_onserver/blog.html
+++ b/www/static/template/shop_onserver/blog.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Blog</title>
+	<title>行业动态</title>
 
 	<!-- responsive meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -143,9 +143,9 @@
                     </div>
                     <div class="navbar-collapse collapse clearfix">
                         <ul class="navigation clearfix">
-                            <li><a href="index.html">Home</a></li>
+                            <li><a href="index.html">网站首页</a></li>
                             <li><a href="services.html">Services</a></li>
-                            <li><a href="about.html">About</a></li>
+                            <li><a href="about.html">关于我们</a></li>
                             <li class="dropdown"><a href="shop.html">Shop</a>
                                 <ul>
                                     <li><a href="shop.html">Shop Products</a></li>
@@ -155,8 +155,8 @@
                                     <li><a href="account.html">My Account</a></li>
                                 </ul>
                             </li>
-                            <li><a href="blog.html">Blog</a></li>
-                            <li><a href="contact.html">Contact Us</a></li>
+                            <li><a href="blog.html">行业动态</a></li>
+                            <li><a href="contact.html">联系我们</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -202,7 +202,7 @@
     <div class="container">
         <div class="left pull-left">
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">网站首页</a></li>
                 <li><i class="fa fa-caret-right" aria-hidden="true"></i></li>
                 <li>News</li>
             </ul>    
@@ -484,7 +484,7 @@
                     <!--Start single-sidebar-->
                     <div class="single-sidebar">
                         <div class="sidebar-title">
-                            <h1>Blog Archives</h1>   
+                            <h1>行业动态 Archives</h1>
                         </div>
                         <ul class="blog-archive">
                             <li><a href="#">August 2013  (5)</a></li>
