--- a/www/static/template/shop_onserver/contact.html
+++ b/www/static/template/shop_onserver/contact.html
@@ -143,9 +143,9 @@
                     </div>
                     <div class="navbar-collapse collapse clearfix">
                         <ul class="navigation clearfix">
-                            <li><a href="index.html">Home</a></li>
+                            <li><a href="index.html">网站首页</a></li>
                             <li><a href="services.html">Services</a></li>
-                            <li><a href="about.html">About</a></li>
+                            <li><a href="about.html">关于我们</a></li>
                             <li class="dropdown"><a href="shop.html">Shop</a>
                                 <ul>
                                     <li><a href="shop.html">Shop Products</a></li>
@@ -155,8 +155,8 @@
                                     <li><a href="account.html">My Account</a></li>
                                 </ul>
                             </li>
-                            <li><a href="blog.html">Blog</a></li>
-                            <li class="current"><a href="contact.html">Contact Us</a></li>
+                            <li><a href="blog.html">行业动态</a></li>
+                            <li class="current"><a href="contact.html">联系我们</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -202,7 +202,7 @@
     <div class="container">
         <div class="left pull-left">
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">网站首页</a></li>
                 <li><i class="fa fa-caret-right" aria-hidden="true"></i></li>
                 <li>Contact</li>
             </ul>    
