--- a/www/static/template/shop_onserver/index.html
+++ b/www/static/template/shop_onserver/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Home</title>
+	<title>网站首页</title>
 
 	<!-- responsive meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -143,9 +143,9 @@
                     </div>
                     <div class="navbar-collapse collapse clearfix">
                         <ul class="navigation clearfix">
-                            <li class="current"><a href="index.html">Home</a></li>
+                            <li class="current"><a href="index.html">网站首页</a></li>
                             <li><a href="services.html">Services</a></li>
-                            <li><a href="about.html">About</a></li>
+                            <li><a href="about.html">关于我们</a></li>
                             <li class="dropdown"><a href="shop.html">Shop</a>
                                 <ul>
                                     <li><a href="shop.html">Shop Products</a></li>
@@ -155,8 +155,8 @@
                                     <li><a href="account.html">My Account</a></li>
                                 </ul>
                             </li>
-                            <li><a href="blog.html">Blog</a></li>
-                            <li><a href="contact.html">Contact Us</a></li>
+                            <li><a href="blog.html">行业动态</a></li>
+                            <li><a href="contact.html">联系我们</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -265,7 +265,7 @@
                         <p>Using original manufactured parts and components, we are able to<br>restore your cell phones or iDevice to like-new condition.</p>
                         <div class="button">
                             <a class="thm-btn bg-1" href="#">Buy Now</a>    
-                            <a class="thm-btn bg-2" href="#">Contact Us</a>    
+                            <a class="thm-btn bg-2" href="#">联系我们</a>
                         </div>
                     </div>
                 </div>
@@ -317,7 +317,7 @@
                     data-start="2600">
                     <div class="slide-content-box">
                         <div class="button">
-                            <a class="thm-btn bg-2" href="">Contact Us</a>     
+                            <a class="thm-btn bg-2" href="">联系我们</a>
                         </div>
                     </div>
                 </div>
@@ -523,7 +523,7 @@
             <div class="col-md-6">
                 <div class="about-content">
                     <div class="sec-title-two">
-                        <h1>About Us</h1>
+                        <h1>关于我们 Us</h1>
                         <span class="border"></span>
                     </div>
                     <ul>
