--- a/www/static/template/shop_onserver/services.html
+++ b/www/static/template/shop_onserver/services.html
@@ -143,7 +143,7 @@
                     </div>
                     <div class="navbar-collapse collapse clearfix">
                         <ul class="navigation clearfix">
-                            <li><a href="index.html">Home</a></li>
+                            <li><a href="index.html">网站首页</a></li>
                             <li class="dropdown current"><a href="services.html">Services</a>
                                 <ul>
                                     <li><a href="smartphone-repair.html">Smartphone Repair</a></li>
@@ -154,7 +154,7 @@
                                     <li><a href="mp3-repair.html">MP3 & MP4 Player Repair</a></li>
                                 </ul>
                             </li>
-                            <li><a href="about.html">About</a></li>
+                            <li><a href="about.html">关于我们</a></li>
                             <li class="dropdown"><a href="shop.html">Shop</a>
                                 <ul>
                                     <li><a href="shop.html">Shop Products</a></li>
@@ -164,8 +164,8 @@
                                     <li><a href="account.html">My Account</a></li>
                                 </ul>
                             </li>
-                            <li><a href="blog.html">Blog</a></li>
-                            <li><a href="contact.html">Contact Us</a></li>
+                            <li><a href="blog.html">行业动态</a></li>
+                            <li><a href="contact.html">联系我们</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -211,7 +211,7 @@
     <div class="container">
         <div class="left pull-left">
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">网站首页</a></li>
                 <li><i class="fa fa-caret-right" aria-hidden="true"></i></li>
                 <li>Services</li>
             </ul>    
