--- a/www/static/template/shop_onserver/shop.html
+++ b/www/static/template/shop_onserver/shop.html
@@ -140,7 +140,7 @@
                         <ul class="navigation clearfix">
                             <li><a href="index.html">网站首页</a></li>
                             <li><a href="services.html">Services</a></li>
-                            <li><a href="about.html">About</a></li>
+                            <li><a href="about.html">关于我们</a></li>
                             <li class="dropdown current"><a href="shop.html">Shop</a>
                                 <ul>
                                     <li><a href="shop.html">Shop Products</a></li>
@@ -150,8 +150,8 @@
                                     <li><a href="account.html">My Account</a></li>
                                 </ul>
                             </li>
-                            <li><a href="blog.html">Blog</a></li>
-                            <li><a href="contact.html">Contact Us</a></li>
+                            <li><a href="blog.html">行业动态</a></li>
+                            <li><a href="contact.html">联系我们</a></li>
                         </ul>
                     </div>
                 </nav>
