--- a/www/static/template/shop_onserver/services.html
+++ b/www/static/template/shop_onserver/services.html
@@ -177,8 +177,8 @@
                         <span class="flaticon-cell-phone"></span>
                     </div>
                     <div class="title-holder">
-                        <h5>Customer Care</h5>
-                        <h4>1800-56-78-9012</h4>
+                        <h5>全国服务热线</h5>
+                        <h4>18505266333</h4>
                     </div>
                 </div>
                 <div class="top-search-box pull-right">
