--- a/www/static/template/shop_onserver/blog-single.html
+++ b/www/static/template/shop_onserver/blog-single.html
@@ -1,16 +1,16 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>关于我们</title>
-	<!-- responsive meta -->
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- For IE -->
+    <meta charset="UTF-8">
+    <title>关于我们</title>
+    <!-- responsive meta -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- For IE -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<!-- master stylesheet -->
-	<link rel="stylesheet" href="css/style.css">
-	<!-- Responsive stylesheet -->
-	<link rel="stylesheet" href="css/responsive.css">
+    <!-- master stylesheet -->
+    <link rel="stylesheet" href="css/style.css">
+    <!-- Responsive stylesheet -->
+    <link rel="stylesheet" href="css/responsive.css">
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" href="images/favicon/favicon-32x32.png" sizes="32x32">
@@ -18,8 +18,8 @@
 
     <!-- Fixing Internet Explorer-->
     <!--[if lt IE 9]>
-        <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-        <script src="js/html5shiv.js"></script>
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="js/html5shiv.js"></script>
     <![endif]-->
 </head>
 <body>
@@ -168,9 +168,9 @@
 
 <!--Start breadcrumb area-->
 <section class="breadcrumb-area">
-	<div class="container text-center">
-		<h1>关于我们</h1>
-	</div>
+    <div class="container text-center">
+        <h1>关于我们</h1>
+    </div>
 </section>
 <!--End breadcrumb area-->
 
@@ -410,12 +410,12 @@
                                     </ul>
                                 </div>
                             </div>
-	                    </div>
-	                    <div class="phone">
-	                        <a href="#">
+                        </div>
+                        <div class="phone">
+                            <a href="#">
                                 <span class="flaticon-call-answer"></span>
-	                        </a>
-	                    </div>
+                            </a>
+                        </div>
                     </div>
                     <div class="text-holder">
                         <h3>Richard Antony</h3>
@@ -442,12 +442,12 @@
                                     </ul>
                                 </div>
                             </div>
-	                    </div>
-	                    <div class="phone">
-	                        <a href="#">
+                        </div>
+                        <div class="phone">
+                            <a href="#">
                                 <span class="flaticon-call-answer"></span>
-	                        </a>
-	                    </div>
+                            </a>
+                        </div>
                     </div>
                     <div class="text-holder">
                         <h3>Willaim Rickmen</h3>
@@ -474,12 +474,12 @@
                                     </ul>
                                 </div>
                             </div>
-	                    </div>
-	                    <div class="phone">
-	                        <a href="#">
+                        </div>
+                        <div class="phone">
+                            <a href="#">
                                 <span class="flaticon-call-answer"></span>
-	                        </a>
-	                    </div>
+                            </a>
+                        </div>
                     </div>
                     <div class="text-holder">
                         <h3>Sunny Vandosky</h3>
@@ -506,12 +506,12 @@
                                     </ul>
                                 </div>
                             </div>
-	                    </div>
-	                    <div class="phone">
-	                        <a href="#">
+                        </div>
+                        <div class="phone">
+                            <a href="#">
                                 <span class="flaticon-call-answer"></span>
-	                        </a>
-	                    </div>
+                            </a>
+                        </div>
                     </div>
                     <div class="text-holder">
                         <h3>Charles Nicholes</h3>
@@ -769,11 +769,6 @@
 
 <!-- thm custom script -->
 <script src="js/custom.js"></script>
-
-
-
-
-
 
 </body>
 </html>
