--- a/www/static/template/shop_onserver/index.html
+++ b/www/static/template/shop_onserver/index.html
@@ -35,10 +35,10 @@
         <div class="row">
             <div class="col-lg-6 col-md-5 col-sm-12 col-xs-12">
                 <div class="welcome">
-                    <p>Welcome to Repairplus Experts, Theme for Repair Shops</p>
+                    <p>欢迎光临源鸿大棚产品服务中心</p>
                 </div> 
             </div>
-            <div class="col-lg-4 col-md-5 col-sm-12 col-xs-12">
+            <div class="col-lg-4 col-md-5 col-sm-12 col-xs-12" style="display:none;">
                 <div class="topinfo clearfix">
                     <div class="select-items clearfix">
                         <div class="single-select-item extras">
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
-                <div class="top-social-links">
+                <div class="top-social-links" style="display:none;">
                     <ul>
                         <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                         <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
@@ -82,46 +82,14 @@
 <header class="header-area">
     <div class="container">
         <div class="row">
-            <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <div class="logo">
                     <a href="index.html">
                         <img src="images/resources/logo.png" alt="Awesome Logo">
                     </a>
                 </div>
             </div>
-            <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
-                <div class="header-contact-info">
-                    <ul>
-                        <li>
-                            <div class="iocn-holder">
-                                <span class="flaticon-home-page"></span>
-                            </div>
-                            <div class="text-holder">
-                                <h5>321, Breaking Street</h5>
-                                <h6>Newyork ,USA 10002</h6>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="iocn-holder">
-                                <span class="flaticon-clock"></span>
-                            </div>
-                            <div class="text-holder">
-                                <h5>Opening Time</h5>
-                                <h6>Mon - Sat: 09.00 to 18.00</h6>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="iocn-holder">
-                                <span class="flaticon-envelope"></span>
-                            </div>
-                            <div class="text-holder">
-                                <h5>Mail Us</h5>
-                                <h6>Supportyou@Repairplus.com</h6>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+
         </div>
     </div>
 </header>  
@@ -144,13 +112,13 @@
                     <div class="navbar-collapse collapse clearfix">
                         <ul class="navigation clearfix">
                             <li class="current"><a href="index.html">网站首页</a></li>
-                            <li><a href="services.html">Services</a></li>
+                            <li><a href="services.html">我们的服务</a></li>
                             <li><a href="about.html">关于我们</a></li>
-                            <li class="dropdown"><a href="shop.html">Shop</a>
+                            <li class="dropdown"><a href="shop.html">产品中心</a>
                                 <ul>
-                                    <li><a href="shop.html">Shop Products</a></li>
+                                    <li><a href="shop.html">产品中心 Products</a></li>
                                     <li><a href="shop-single.html">Single Product</a></li>
-                                    <li><a href="shopping-cart.html">Shopping Cart</a></li>
+                                    <li><a href="shopping-cart.html">产品中心ping Cart</a></li>
                                     <li><a href="checkout.html">Checkout</a></li>
                                     <li><a href="account.html">My Account</a></li>
                                 </ul>
@@ -177,7 +145,7 @@
                     <ul class="search-box">
                         <li>
                             <form action="#">
-                                <input placeholder="Search for something..." type="text">
+                                <input placeholder="请输入关键词..." type="text">
                                 <button type="submit"><i class="fa fa-search"></i></button>
                             </form>
                         </li>
@@ -209,8 +177,8 @@
                     data-responsive_offset="on"
                     data-start="700">
                     <div class="slide-content-box">
-                        <h1>Welcome to RepairPlus <br>quick repair</h1>
-                        <p>Using original manufactured parts and components, we are able to<br>restore your cell phones or iDevice to like-new condition.</p>
+                        <!--<h1>Welcome to RepairPlus <br>quick repair</h1>-->
+                        <!--<p>Using original manufactured parts and components, we are able to<br>restore your cell phones or iDevice to like-new condition.</p>-->
                     </div>
                 </div>
                 <div class="tp-caption tp-resizeme" 
@@ -225,7 +193,7 @@
                     data-start="2300">
                     <div class="slide-content-box">
                         <div class="button">
-                            <a class="thm-btn bg-1" href="">Buy Now</a>     
+                            <a class="thm-btn bg-1" href=""></a>
                         </div>
                     </div>
                 </div>
@@ -261,67 +229,67 @@
                     data-responsive_offset="on"
                     data-start="500">
                     <div class="slide-content-box">
-                        <h1>We will replace quality <br>accessories</h1>
-                        <p>Using original manufactured parts and components, we are able to<br>restore your cell phones or iDevice to like-new condition.</p>
+                        <!--<h1>We will replace quality <br>accessories</h1>-->
+                        <!--<p>Using original manufactured parts and components, we are able to<br>restore your cell phones or iDevice to like-new condition.</p>-->
                         <div class="button">
-                            <a class="thm-btn bg-1" href="#">Buy Now</a>    
+                            <!--<a class="thm-btn bg-1" href="#"></a>    -->
                             <a class="thm-btn bg-2" href="#">联系我们</a>
                         </div>
                     </div>
                 </div>
             </li>
-            <li data-transition="fade">
-                <img src="images/slides/3.jpg" alt="" width="1920" height="540" data-bgposition="top center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="1" >
-                
-                <div class="tp-caption  tp-resizeme" 
-                    data-x="left" data-hoffset="0" 
-                    data-y="top" data-voffset="125" 
-                    data-transform_idle="o:1;"         
-                    data-transform_in="x:[-175%];y:0px;z:0;rX:0;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0.01;s:3000;e:Power3.easeOut;" 
-                    data-transform_out="s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;" 
-                    data-mask_in="x:[100%];y:0;s:inherit;e:inherit;" 
-                    data-splitin="none" 
-                    data-splitout="none"
-                    data-responsive_offset="on"
-                    data-start="700">
-                    <div class="slide-content-box">
-                        <h1>We can fix it broken<br>mobile glasses</h1>
-                        <p>Using original manufactured parts and components, we are able to<br>restore your cell phones or iDevice to like-new condition.</p>
-                    </div>
-                </div>
-                <div class="tp-caption tp-resizeme" 
-                    data-x="left" data-hoffset="0" 
-                    data-y="top" data-voffset="350" 
-                    data-transform_idle="o:1;"                         
-                    data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" 
-                    data-transform_out="s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;"                     
-                    data-splitin="none" 
-                    data-splitout="none" 
-                    data-responsive_offset="on"
-                    data-start="2300">
-                    <div class="slide-content-box">
-                        <div class="button">
-                            <a class="thm-btn bg-1" href="">Buy Now</a>     
-                        </div>
-                    </div>
-                </div>
-                <div class="tp-caption tp-resizeme" 
-                    data-x="left" data-hoffset="173" 
-                    data-y="top" data-voffset="350" 
-                    data-transform_idle="o:1;"                         
-                    data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" 
-                    data-transform_out="s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;"                     
-                    data-splitin="none" 
-                    data-splitout="none" 
-                    data-responsive_offset="on"
-                    data-start="2600">
-                    <div class="slide-content-box">
-                        <div class="button">
-                            <a class="thm-btn bg-2" href="">联系我们</a>
-                        </div>
-                    </div>
-                </div>
-            </li>
+            <!--<li data-transition="fade">-->
+                <!--<img src="images/slides/3.jpg" alt="" width="1920" height="540" data-bgposition="top center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="1" >-->
+                <!---->
+                <!--<div class="tp-caption  tp-resizeme" -->
+                    <!--data-x="left" data-hoffset="0" -->
+                    <!--data-y="top" data-voffset="125" -->
+                    <!--data-transform_idle="o:1;"         -->
+                    <!--data-transform_in="x:[-175%];y:0px;z:0;rX:0;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0.01;s:3000;e:Power3.easeOut;" -->
+                    <!--data-transform_out="s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;" -->
+                    <!--data-mask_in="x:[100%];y:0;s:inherit;e:inherit;" -->
+                    <!--data-splitin="none" -->
+                    <!--data-splitout="none"-->
+                    <!--data-responsive_offset="on"-->
+                    <!--data-start="700">-->
+                    <!--<div class="slide-content-box">-->
+                        <!--<h1>We can fix it broken<br>mobile glasses</h1>-->
+                        <!--<p>Using original manufactured parts and components, we are able to<br>restore your cell phones or iDevice to like-new condition.</p>-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--<div class="tp-caption tp-resizeme" -->
+                    <!--data-x="left" data-hoffset="0" -->
+                    <!--data-y="top" data-voffset="350" -->
+                    <!--data-transform_idle="o:1;"                         -->
+                    <!--data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" -->
+                    <!--data-transform_out="s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;"                     -->
+                    <!--data-splitin="none" -->
+                    <!--data-splitout="none" -->
+                    <!--data-responsive_offset="on"-->
+                    <!--data-start="2300">-->
+                    <!--<div class="slide-content-box">-->
+                        <!--<div class="button">-->
+                            <!--<a class="thm-btn bg-1" href=""></a>     -->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--<div class="tp-caption tp-resizeme" -->
+                    <!--data-x="left" data-hoffset="173" -->
+                    <!--data-y="top" data-voffset="350" -->
+                    <!--data-transform_idle="o:1;"                         -->
+                    <!--data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" -->
+                    <!--data-transform_out="s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;"                     -->
+                    <!--data-splitin="none" -->
+                    <!--data-splitout="none" -->
+                    <!--data-responsive_offset="on"-->
+                    <!--data-start="2600">-->
+                    <!--<div class="slide-content-box">-->
+                        <!--<div class="button">-->
+                            <!--<a class="thm-btn bg-2" href="">联系我们</a>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</li>-->
         </ul>
     </div>
 </section>
@@ -523,7 +491,7 @@
             <div class="col-md-6">
                 <div class="about-content">
                     <div class="sec-title-two">
-                        <h1>关于我们 Us</h1>
+                        <h1>关于我们</h1>
                         <span class="border"></span>
                     </div>
                     <ul>
@@ -1066,7 +1034,7 @@
 <!--End Brand area-->        
   
 <!--Start footer area-->  
-<footer class="footer-area">
+<footer class="footer-area" style="display:none;">
     <div class="container">
         <div class="row">
             <!--Start single footer widget-->
@@ -1094,7 +1062,7 @@
                         <div class="col-lg-3 col-md-4 col-sm-12">
                             <div class="single-footer-widget">
                                 <div class="title">
-                                    <h3>Our Services</h3>
+                                    <h3>Our 我们的服务</h3>
                                 </div>
                                 <ul class="services-list">
                                     <li><a href="smartphone-repair.html">Smart Phone Repair</a></li>
@@ -1138,7 +1106,7 @@
                         <div class="col-lg-4 col-md-4 col-sm-12">
                             <div class="single-footer-widget contact-info-widget">
                                 <div class="title">
-                                    <h3>Contact Info</h3>
+                                    <h3>联系我们 Info</h3>
                                 </div>
                                 <ul class="footer-contact-info">
                                     <li>
@@ -1186,7 +1154,7 @@
             <div class="col-md-12">
                 <div class="footer-bottom">
                     <div class="copyright-text pull-left">
-                        <p>Copyright &copy; 2017.Company name All rights reserved.More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></p> 
+                        <p>Copyright &copy; 2019.Company name nanjing daoke  - Collect from <a href="http://www.cssmoban.com/" title="南京稻壳网络科技有限公司" target="_blank">南京稻壳网络科技有限公司</a></p>
                     </div>
                     <div class="payment-method pull-right">
                         <ul>
