--- a/www/static/template/shop_onserver/shop.html
+++ b/www/static/template/shop_onserver/shop.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Shop</title>
+	<title>产品中心</title>
 
 	<!-- responsive meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -35,10 +35,10 @@
         <div class="row">
             <div class="col-lg-6 col-md-5 col-sm-12 col-xs-12">
                 <div class="welcome">
-                    <p>欢迎光临XXX 大棚厂商</p>
+                    <p>欢迎光临源鸿室内大棚</p>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-5 col-sm-12 col-xs-12">
+            <div class="col-lg-4 col-md-5 col-sm-12 col-xs-12" style="display:none;">
                 <div class="topinfo clearfix">
                     <div class="select-items clearfix">
                         <div class="single-select-item extras">
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
-                <div class="top-social-links">
+                <div class="top-social-links" style="display:none;">
                     <ul>
                         <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                         <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
@@ -77,7 +77,7 @@
 <!--<header class="header-area">-->
     <!--<div class="container">-->
         <!--<div class="row">-->
-            <!--<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">-->
+            <!--<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">-->
                 <!--<div class="logo">-->
                     <!--<a href="index.html">-->
                         <!--<img src="images/resources/logo.png" alt="Awesome Logo">-->
@@ -139,13 +139,12 @@
                     <div class="navbar-collapse collapse clearfix">
                         <ul class="navigation clearfix">
                             <li><a href="index.html">网站首页</a></li>
-                            <li><a href="services.html">Services</a></li>
+                            <li><a href="services.html">我们的服务</a></li>
                             <li><a href="about.html">关于我们</a></li>
-                            <li class="dropdown current"><a href="shop.html">Shop</a>
+                            <li class="dropdown current"><a href="shop.html">产品中心</a>
                                 <ul>
-                                    <li><a href="shop.html">Shop Products</a></li>
+                                    <li><a href="shop.html">产品中心 Products</a></li>
                                     <li><a href="shop-single.html">Single Product</a></li>
-                                    <li><a href="shopping-cart.html">Shopping Cart</a></li>
                                     <li><a href="checkout.html">Checkout</a></li>
                                     <li><a href="account.html">My Account</a></li>
                                 </ul>
@@ -172,7 +171,7 @@
                     <ul class="search-box">
                         <li>
                             <form action="#">
-                                <input placeholder="Search for something..." type="text">
+                                <input placeholder="请输入关键词..." type="text">
                                 <button type="submit"><i class="fa fa-search"></i></button>
                             </form>
                         </li>
@@ -187,7 +186,7 @@
 <!--Start breadcrumb area-->
 <section class="breadcrumb-area">
 	<div class="container text-center">
-		<h1>Shop</h1>
+		<h1>产品中心</h1>
 	</div>
 </section>
 <!--End breadcrumb area-->
@@ -199,7 +198,7 @@
             <ul>
                 <li><a href="index.html">网站首页</a></li>
                 <li><i class="fa fa-caret-right" aria-hidden="true"></i></li>
-                <li>Shop</li>
+                <li>产品中心</li>
             </ul>
         </div>
         <div class="right pull-right">
@@ -590,31 +589,31 @@
                         <ul class="categories clearfix">
                             <li>
                                 <a href="#">
-                                    Smart Phones
+                                    连栋大棚
                                     <span class="pull-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    Desktop & Mac
+                                    拱形大棚
                                     <span class="pull-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    Game Console
+                                    花卉大棚
                                     <span class="pull-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    Safety & Security
+                                    蔬菜大棚
                                     <span class="pull-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    Uncategorized
+                                    养殖大棚
                                     <span class="pull-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
                                 </a>
                             </li>
@@ -739,7 +738,7 @@
 
 
 <!--Start footer area-->
-<footer class="footer-area">
+<footer class="footer-area" style="display:none;">
     <div class="container">
         <div class="row">
             <!--Start single footer widget-->
@@ -767,7 +766,7 @@
                         <div class="col-lg-3 col-md-4 col-sm-12">
                             <div class="single-footer-widget">
                                 <div class="title">
-                                    <h3>Our Services</h3>
+                                    <h3>Our 我们的服务</h3>
                                 </div>
                                 <ul class="services-list">
                                     <li><a href="smartphone-repair.html">Smart Phone Repair</a></li>
@@ -811,7 +810,7 @@
                         <div class="col-lg-4 col-md-4 col-sm-12">
                             <div class="single-footer-widget contact-info-widget">
                                 <div class="title">
-                                    <h3>Contact Info</h3>
+                                    <h3>联系我们 Info</h3>
                                 </div>
                                 <ul class="footer-contact-info">
                                     <li>
@@ -859,7 +858,7 @@
             <div class="col-md-12">
                 <div class="footer-bottom">
                     <div class="copyright-text pull-left">
-                        <p>Copyright &copy; 2017.Company name All rights reserved.More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></p>
+                        <p>Copyright &copy; 2019.Company name 南京稻壳网络科技有限公司 </p>
                     </div>
                     <div class="payment-method pull-right">
                         <ul>
