--- a/www/static/template/shop_onserver/blog-single.html
+++ b/www/static/template/shop_onserver/blog-single.html
@@ -271,7 +271,7 @@
                           method="post">
                         <div class="row">
                             <div class="col-md-6">
-                                <input type="text" name="form_name" value="" placeholder="Your Name*" required="">
+                                <input type="text" name="form_name" value="" placeholder="你的名字" required="">
                             </div>
                             <div class="col-md-6">
                                 <input type="email" name="form_email" value="" placeholder="Your Mail*" required="">
