--- a/www/static/template/shop_onserver/contact.html
+++ b/www/static/template/shop_onserver/contact.html
@@ -271,23 +271,23 @@
                           method="post">
                         <div class="row">
                             <div class="col-md-6">
-                                <input type="text" name="form_name" value="" placeholder="Your Name*" required="">
+                                <input type="text" name="form_name" value="" placeholder="你的名字*" required="">
                             </div>
                             <div class="col-md-6">
-                                <input type="email" name="form_email" value="" placeholder="Your Mail*" required="">
+                                <input type="email" name="form_email" value="" placeholder="你的邮箱*" required="">
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-md-6">
-                                <input type="text" name="form_phone" value="" placeholder="Phone">
+                                <input type="text" name="form_phone" value="" placeholder="手机号">
                             </div>
                             <div class="col-md-6">
-                                <input type="text" name="form_subject" value="" placeholder="Subject">
+                                <input type="text" name="form_subject" value="" placeholder="联系方式">
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-md-12">
-                                <textarea name="form_message" placeholder="Your Message.." required=""></textarea>
+                                <textarea name="form_message" placeholder="备注.." required=""></textarea>
                             </div>
                         </div>
                         <div class="row">
