--- a/www/static/template/shop_onserver/index.html
+++ b/www/static/template/shop_onserver/index.html
@@ -181,38 +181,6 @@
                         <!--<p>Using original manufactured parts and components, we are able to<br>restore your cell phones or iDevice to like-new condition.</p>-->
                     </div>
                 </div>
-                <div class="tp-caption tp-resizeme" 
-                    data-x="left" data-hoffset="0" 
-                    data-y="top" data-voffset="350" 
-                    data-transform_idle="o:1;"                         
-                    data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" 
-                    data-transform_out="s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;"                     
-                    data-splitin="none" 
-                    data-splitout="none" 
-                    data-responsive_offset="on"
-                    data-start="2300">
-                    <div class="slide-content-box">
-                        <div class="button">
-                            <a class="thm-btn bg-1" href=""></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="tp-caption tp-resizeme" 
-                    data-x="left" data-hoffset="176" 
-                    data-y="top" data-voffset="350" 
-                    data-transform_idle="o:1;"                         
-                    data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" 
-                    data-transform_out="s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;"                     
-                    data-splitin="none" 
-                    data-splitout="none" 
-                    data-responsive_offset="on"
-                    data-start="2600">
-                    <div class="slide-content-box">
-                        <div class="button">
-                            <a class="thm-btn bg-2" href="">contact us</a>     
-                        </div>
-                    </div>
-                </div>
             </li>
             <li data-transition="fade">
                 <img src="images/slides/2.jpg" alt="" width="1920" height="540" data-bgposition="top center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="1" >
@@ -824,7 +792,7 @@
     </div>
 </section>
 <!--End appoinment area-->
-<div class="tlinks">Collect from <a href="http://www.cssmoban.com/" >企业网站模板</a></div>
+<div class="tlinks">来自 <a href="http://www.cssmoban.com/" >企业网站模板</a></div>
 <!--Start latest blog area-->
 <section class="latest-blog-area">
     <div class="container">
@@ -923,7 +891,7 @@
 <section class="testimonial-area">
     <div class="container">
         <div class="sec-title text-center">
-            <h1>Testimonials</h1>
+            <h1>品牌分类</h1>
         </div>
         <div class="row">
             <div class="col-md-12">
@@ -934,12 +902,12 @@
                             <img src="images/testimonial/1.png" alt="Awesome Image">
                         </div>
                         <div class="text-holder">
-                            <h5>Water Damage Repair</h5>
+                            <h5>连栋大棚</h5>
                             <p>Excellent service and swift repair and I get to keep my Phone. I feel Really great.</p>
                         </div>
                         <div class="client-info">
                             <div class="name pull-left">
-                                <h6>John Wiliamson</h6>
+                                <h6>拱形大棚</h6>
                                 <p>Newyork City</p>
                             </div>
                             <div class="rating-box pull-right">
@@ -954,7 +922,7 @@
                             <img src="images/testimonial/2.png" alt="Awesome Image">
                         </div>
                         <div class="text-holder">
-                            <h5>Broken Glass Repair</h5>
+                            <h5>花卉大棚</h5>
                             <p>Great service as this was2nd repair with Mr.Fixit, excellent communication.</p>
                         </div>
                         <div class="client-info">
@@ -974,7 +942,7 @@
                             <img src="images/testimonial/3.png" alt="Awesome Image">
                         </div>
                         <div class="text-holder">
-                            <h5>Water Damage Repair</h5>
+                            <h5>蔬菜大棚</h5>
                             <p>Repaired my iPhone 6s through thorough examination, updated at all times.</p>
                         </div>
                         <div class="client-info">
@@ -1034,9 +1002,9 @@
 <!--End Brand area-->        
   
 <!--Start footer area-->  
-<footer class="footer-area" style="display:none;">
+<footer class="footer-area">
     <div class="container">
-        <div class="row">
+        <div class="row"  style="display:none;">
             <!--Start single footer widget-->
             <div class="col-lg-4 col-md-3 col-sm-12 col-xs-12">
                 <div class="single-footer-widget pd-bottom">
@@ -1154,17 +1122,10 @@
             <div class="col-md-12">
                 <div class="footer-bottom">
                     <div class="copyright-text pull-left">
-                        <p>Copyright &copy; 2019.Company name nanjing daoke  - Collect from <a href="http://www.cssmoban.com/" title="南京稻壳网络科技有限公司" target="_blank">南京稻壳网络科技有限公司</a></p>
+                        <p>北国春大棚 联系人:吴经理 手机:15052759577(微信同号)
+版权所有： 南京稻壳网络科技有限公司 ICP备案号: 苏ICP备18022274号-8 - 来自 <a href="#" title="南京稻壳网络科技有限公司" target="_blank"></a></p>
                     </div>
-                    <div class="payment-method pull-right">
-                        <ul>
-                            <li><a href="#"><i class="fa fa-cc-visa" aria-hidden="true"></i></a></li>
-                            <li><a href="#"><i class="fa fa-cc-paypal" aria-hidden="true"></i></a></li>
-                            <li><a href="#"><i class="fa fa-cc-mastercard" aria-hidden="true"></i></a></li>
-                            <li><a href="#"><i class="fa fa-cc-amex" aria-hidden="true"></i></a></li>
-                            <li><a href="#"><i class="fa fa-cc-discover" aria-hidden="true"></i></a></li>
-                        </ul>
-                    </div>
+
                     
                 </div>
             </div>
