--- a/www/static/template/shop_onserver/shopping-cart.html
+++ b/www/static/template/shop_onserver/shopping-cart.html
@@ -340,9 +340,9 @@
 <!--End cart area-->
 
 <!--Start footer area-->  
-<footer class="footer-area" style="display:none;">
+<footer class="footer-area">
     <div class="container">
-        <div class="row">
+        <div class="row"  style="display:none;">
             <!--Start single footer widget-->
             <div class="col-lg-4 col-md-3 col-sm-12 col-xs-12">
                 <div class="single-footer-widget pd-bottom">
@@ -460,17 +460,10 @@
             <div class="col-md-12">
                 <div class="footer-bottom">
                     <div class="copyright-text pull-left">
-                        <p>Copyright &copy; 2019.Company name nanjing daoke  - Collect from <a href="http://www.cssmoban.com/" title="南京稻壳网络科技有限公司" target="_blank">南京稻壳网络科技有限公司</a></p>
+                        <p>北国春大棚 联系人:吴经理 手机:15052759577(微信同号)
+版权所有： 南京稻壳网络科技有限公司 ICP备案号: 苏ICP备18022274号-8 - 来自 <a href="#" title="南京稻壳网络科技有限公司" target="_blank"></a></p>
                     </div>
-                    <div class="payment-method pull-right">
-                        <ul>
-                            <li><a href="#"><i class="fa fa-cc-visa" aria-hidden="true"></i></a></li>
-                            <li><a href="#"><i class="fa fa-cc-paypal" aria-hidden="true"></i></a></li>
-                            <li><a href="#"><i class="fa fa-cc-mastercard" aria-hidden="true"></i></a></li>
-                            <li><a href="#"><i class="fa fa-cc-amex" aria-hidden="true"></i></a></li>
-                            <li><a href="#"><i class="fa fa-cc-discover" aria-hidden="true"></i></a></li>
-                        </ul>
-                    </div>
+
                     
                 </div>
             </div>
