--- a/www/static/template/shop_onserver/blog.html
+++ b/www/static/template/shop_onserver/blog.html
@@ -533,12 +533,12 @@
                                     <h3>Our 我们的服务</h3>
                                 </div>
                                 <ul class="services-list">
-                                    <li><a href="smartphone-repair.html">Smart Phone Repair</a></li>
-                                    <li><a href="tablet-repair.html">Tablets & iPad Repair</a></li>
-                                    <li><a href="desktop-repair.html">Desktop & Laptop</a></li>
-                                    <li><a href="game-repair.html">Game System Repair</a></li>
-                                    <li><a href="lcd-repair.html">LCD & LED TV Repair</a></li>
-                                    <li><a href="mp3-repair.html">MP3 & MP4 Player</a></li>
+                                    <li><a href="smartphone-repair.html">连栋大棚</a></li>
+                                    <li><a href="tablet-repair.html">拱形大棚</a></li>
+                                    <li><a href="desktop-repair.html">花卉大棚</a></li>
+                                    <li><a href="game-repair.html">蔬菜大棚</a></li>
+                                    <li><a href="lcd-repair.html">养殖大棚</a></li>
+                                    <li><a href="mp3-repair.html">大棚配件</a></li>
                                 </ul>
                             </div>
                         </div>
