--- a/www/static/template/shop_onserver/index.html
+++ b/www/static/template/shop_onserver/index.html
@@ -271,7 +271,7 @@
             <div class="col-md-4">
                 <div class="single-item text-center">
                     <a href="#">
-                        <h5>Smart phone Repair</h5>
+                        <h5>连栋大棚</h5>
                     </a>
                     <div class="img-holder">
                         <img src="images/callto-action/1.jpg" alt="Awesome Image">
@@ -293,7 +293,7 @@
             <div class="col-md-4">
                 <div class="single-item text-center">
                     <a href="#">
-                        <h5>Tablets & Ipad Repair</h5>
+                        <h5>花卉大棚</h5>
                     </a>
                     <div class="img-holder">
                         <img src="images/callto-action/2.jpg" alt="Awesome Image">
@@ -315,7 +315,7 @@
             <div class="col-md-4">
                 <div class="single-item text-center">
                     <a href="#">
-                        <h5>Desktop & Mac Repair</h5>
+                        <h5>拱形大棚</h5>
                     </a>
                     <div class="img-holder">
                         <img src="images/callto-action/1.jpg" alt="Awesome Image">
@@ -498,7 +498,7 @@
                             </div>
                             <div class="text-holder">
                                 <h4>Free Diagnostics</h4>
-                                <p>Mr.Fixit is a quick and easy way of checking the set up on your Mobile Phones, Desktop & Laptop, Acessories and ect... We done its free of cost.</p>
+                                <p>Mr.Fixit is a quick and easy way of checking the set up on your Mobile Phones, 花卉大棚, Acessories and ect... We done its free of cost.</p>
                             </div>
                         </li>
                         <li>
@@ -1033,12 +1033,12 @@
                                     <h3>Our 我们的服务</h3>
                                 </div>
                                 <ul class="services-list">
-                                    <li><a href="smartphone-repair.html">Smart Phone Repair</a></li>
-                                    <li><a href="tablet-repair.html">Tablets & iPad Repair</a></li>
-                                    <li><a href="desktop-repair.html">Desktop & Laptop</a></li>
-                                    <li><a href="game-repair.html">Game System Repair</a></li>
-                                    <li><a href="lcd-repair.html">LCD & LED TV Repair</a></li>
-                                    <li><a href="mp3-repair.html">MP3 & MP4 Player</a></li>
+                                    <li><a href="smartphone-repair.html">连栋大棚</a></li>
+                                    <li><a href="tablet-repair.html">拱形大棚</a></li>
+                                    <li><a href="desktop-repair.html">花卉大棚</a></li>
+                                    <li><a href="game-repair.html">蔬菜大棚</a></li>
+                                    <li><a href="lcd-repair.html">养殖大棚</a></li>
+                                    <li><a href="mp3-repair.html">大棚配件</a></li>
                                 </ul>
                             </div>
                         </div>
