--- a/www/static/template/shop_onserver/services.html
+++ b/www/static/template/shop_onserver/services.html
@@ -116,10 +116,10 @@
                                 <ul>
                                     <li><a href="smartphone-repair.html">Smartphone Repair</a></li>
                                     <li><a href="tablet-repair.html">Tablet & iPad Repair</a></li>
-                                    <li><a href="desktop-repair.html">Desktop & Mac Repair</a></li>
+                                    <li><a href="desktop-repair.html">拱形大棚</a></li>
                                     <li><a href="game-repair.html">Game Console Repair</a></li>
                                     <li><a href="lcd-repair.html">LCD & LED Tv Repair</a></li>
-                                    <li><a href="mp3-repair.html">MP3 & MP4 Player Repair</a></li>
+                                    <li><a href="mp3-repair.html">大棚配件 Repair</a></li>
                                 </ul>
                             </li>
                             <li><a href="about.html">关于我们</a></li>
@@ -199,7 +199,7 @@
             <div class="col-md-4">
                 <div class="single-item text-center">
                     <a href="smartphone-repair.html">
-                        <h5>Smart phone Repair</h5>
+                        <h5>连栋大棚</h5>
                     </a>
                     <div class="img-holder">
                         <img src="images/services/1.jpg" alt="Awesome Image">
@@ -221,7 +221,7 @@
             <div class="col-md-4">
                 <div class="single-item text-center">
                     <a href="tablet-repair.html">
-                        <h5>Tablets & Ipad Repair</h5>
+                        <h5>花卉大棚</h5>
                     </a>
                     <div class="img-holder">
                         <img src="images/services/2.jpg" alt="Awesome Image">
@@ -243,7 +243,7 @@
             <div class="col-md-4">
                 <div class="single-item text-center">
                     <a href="desktop-repair.html">
-                        <h5>Desktop & Mac Repair</h5>
+                        <h5>拱形大棚</h5>
                     </a>
                     <div class="img-holder">
                         <img src="images/services/3.jpg" alt="Awesome Image">
@@ -364,12 +364,12 @@
                                     <h3>Our 我们的服务</h3>
                                 </div>
                                 <ul class="services-list">
-                                    <li><a href="smartphone-repair.html">Smart Phone Repair</a></li>
-                                    <li><a href="tablet-repair.html">Tablets & iPad Repair</a></li>
-                                    <li><a href="desktop-repair.html">Desktop & Laptop</a></li>
-                                    <li><a href="game-repair.html">Game System Repair</a></li>
-                                    <li><a href="lcd-repair.html">LCD & LED TV Repair</a></li>
-                                    <li><a href="mp3-repair.html">MP3 & MP4 Player</a></li>
+                                    <li><a href="smartphone-repair.html">连栋大棚</a></li>
+                                    <li><a href="tablet-repair.html">拱形大棚</a></li>
+                                    <li><a href="desktop-repair.html">花卉大棚</a></li>
+                                    <li><a href="game-repair.html">蔬菜大棚</a></li>
+                                    <li><a href="lcd-repair.html">养殖大棚</a></li>
+                                    <li><a href="mp3-repair.html">大棚配件</a></li>
                                 </ul>
                             </div>
                         </div>
