--- a/www/static/template/shop_onserver/index.html
+++ b/www/static/template/shop_onserver/index.html
@@ -284,7 +284,7 @@
                         </div>
                     </div>
                     <div class="text-holder">
-                        <p>We specialise in Phone repairs for Apple iPhones, iPad, iPod, Samsung, Galaxy, Sony, HTC, Nexus, Motorola, Blackberry & Tablets.</p>
+                        <p>连栋温室是温室的一种升级存在，其实就是一种超级大温室， 把原有的独立单间温室，用科学的手段、合理的设计、优秀的材料将原有的独立单间模式温室连起来。.</p>
                     </div>
                 </div>
             </div>
@@ -306,7 +306,8 @@
                         </div>
                     </div>
                     <div class="text-holder">
-                        <p>If you are facing any problem with your Tablets / Ipads, Kindly pls go through the menttioned catagories as per requirement.</p>
+                        <p>大棚，原是蔬菜生产的专用设备，随着生产的发展大棚的应用越加广泛。当前大棚已用于盆花及切花栽培
+                            大棚花卉，就是将许多不同种类的花卉汇集到大棚的一种种植技术。</p>
                     </div>
                 </div>
             </div>
@@ -328,7 +329,7 @@
                         </div>
                     </div>
                     <div class="text-holder">
-                        <p>We specialist in providing On-Site Computer Desktop Repair Service and Network Support for all sized business, On-Site Computer.</p>
+                        <p>林业生产用于林木育苗、观赏树木的培养等；养殖业用于养蚕、养鸡、养牛、养猪、鱼及鱼苗等。</p>
                     </div>
                 </div>
             </div>
