--- a/www/static/template/shop_onserver/services.html
+++ b/www/static/template/shop_onserver/services.html
@@ -198,15 +198,15 @@
             <!--Start single item-->
             <div class="col-md-4">
                 <div class="single-item text-center">
-                    <a href="smartphone-repair.html">
+                    <a href="#">
                         <h5>连栋大棚</h5>
                     </a>
                     <div class="img-holder">
-                        <img src="images/services/1.jpg" alt="Awesome Image">
+                        <img src="images/callto-action/1.jpg" alt="Awesome Image">
                         <div class="overlay">
                             <div class="box">
                                 <div class="content">
-                                    <a href="smartphone-repair.html"><i class="fa fa-link" aria-hidden="true"></i></a>
+                                    <a href="#"><i class="fa fa-link" aria-hidden="true"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -220,38 +220,39 @@
             <!--Start single item-->
             <div class="col-md-4">
                 <div class="single-item text-center">
-                    <a href="tablet-repair.html">
+                    <a href="#">
                         <h5>花卉大棚</h5>
                     </a>
                     <div class="img-holder">
-                        <img src="images/services/2.jpg" alt="Awesome Image">
+                        <img src="images/callto-action/2.jpg" alt="Awesome Image">
                         <div class="overlay">
                             <div class="box">
                                 <div class="content">
-                                    <a href="tablet-repair.html"><i class="fa fa-link" aria-hidden="true"></i></a>
+                                    <a href="#"><i class="fa fa-link" aria-hidden="true"></i></a>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="text-holder">
-                        <p>大棚，原是蔬菜生产的专用设备，随着生产的发展大棚的应用越加广泛。当前大棚已用于盆花及切花栽培。 [1]
+                        <p>大棚，原是蔬菜生产的专用设备，随着生产的发展大棚的应用越加广泛。当前大棚已用于盆花及切花栽培
                             大棚花卉，就是将许多不同种类的花卉汇集到大棚的一种种植技术。</p>
                     </div>
                 </div>
             </div>
             <!--End single item-->
             <!--Start single item-->
+
             <div class="col-md-4">
                 <div class="single-item text-center">
-                    <a href="desktop-repair.html">
+                    <a href="#">
                         <h5>拱形大棚</h5>
                     </a>
                     <div class="img-holder">
-                        <img src="images/services/3.jpg" alt="Awesome Image">
+                        <img src="images/callto-action/1.jpg" alt="Awesome Image">
                         <div class="overlay">
                             <div class="box">
                                 <div class="content">
-                                    <a href="desktop-repair.html"><i class="fa fa-link" aria-hidden="true"></i></a>
+                                    <a href="#"><i class="fa fa-link" aria-hidden="true"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -261,25 +262,27 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="row">
             <!--End single item-->
             <!--Start single item-->
             <div class="col-md-4">
                 <div class="single-item text-center">
-                    <a href="game-repair.html">
-                        <h5>Game Console Repair</h5>
+                    <a href="#">
+                        <h5>连栋大棚</h5>
                     </a>
                     <div class="img-holder">
-                        <img src="images/services/4.jpg" alt="Awesome Image">
+                        <img src="images/callto-action/1.jpg" alt="Awesome Image">
                         <div class="overlay">
                             <div class="box">
                                 <div class="content">
-                                    <a href="game-repair.html"><i class="fa fa-link" aria-hidden="true"></i></a>
+                                    <a href="#"><i class="fa fa-link" aria-hidden="true"></i></a>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="text-holder">
-                        <p>Has your gaming life come to a halt because of faulty equipment? Let us help you with video game console repair, Our technicians can.</p>
+                        <p>连栋温室是温室的一种升级存在，其实就是一种超级大温室， 把原有的独立单间温室，用科学的手段、合理的设计、优秀的材料将原有的独立单间模式温室连起来。.</p>
                     </div>
                 </div>
             </div>
@@ -287,21 +290,22 @@
             <!--Start single item-->
             <div class="col-md-4">
                 <div class="single-item text-center">
-                    <a href="lcd-repair.html">
-                        <h5>LCD & LED Tv Repair</h5>
+                    <a href="#">
+                        <h5>花卉大棚</h5>
                     </a>
                     <div class="img-holder">
-                        <img src="images/services/5.jpg" alt="Awesome Image">
+                        <img src="images/callto-action/2.jpg" alt="Awesome Image">
                         <div class="overlay">
                             <div class="box">
                                 <div class="content">
-                                    <a href="lcd-repair.html"><i class="fa fa-link" aria-hidden="true"></i></a>
+                                    <a href="#"><i class="fa fa-link" aria-hidden="true"></i></a>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="text-holder">
-                        <p>It doesn’t matter where you purchased your television, our experts can fix the problem at our state-of-the-art repair lab.</p>
+                        <p>大棚，原是蔬菜生产的专用设备，随着生产的发展大棚的应用越加广泛。当前大棚已用于盆花及切花栽培
+                            大棚花卉，就是将许多不同种类的花卉汇集到大棚的一种种植技术。</p>
                     </div>
                 </div>
             </div>
@@ -309,21 +313,21 @@
             <!--Start single item-->
             <div class="col-md-4">
                 <div class="single-item text-center">
-                    <a href="mp3-repair.html">
-                        <h5>MP3 & Mp4 Player Repair</h5>
+                    <a href="#">
+                        <h5>拱形大棚</h5>
                     </a>
                     <div class="img-holder">
-                        <img src="images/services/6.jpg" alt="Awesome Image">
+                        <img src="images/callto-action/1.jpg" alt="Awesome Image">
                         <div class="overlay">
                             <div class="box">
                                 <div class="content">
-                                    <a href="mp3-repair.html"><i class="fa fa-link" aria-hidden="true"></i></a>
+                                    <a href="#"><i class="fa fa-link" aria-hidden="true"></i></a>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="text-holder">
-                        <p>If you are facing any problem with your MP3 / P4 Player, dont worry our experts also repair those digital systems.</p>
+                        <p>林业生产用于林木育苗、观赏树木的培养等；养殖业用于养蚕、养鸡、养牛、养猪、鱼及鱼苗等。</p>
                     </div>
                 </div>
             </div>
