--- a/www/static/template/shop_onserver/index.html
+++ b/www/static/template/shop_onserver/index.html
@@ -137,7 +137,7 @@
                     </div>
                     <div class="title-holder">
                         <h5>全国服务热线</h5>
-                        <h4>18505266333</h4>
+                        <h4><a href="tel:15195986013">15195986013</a></h4>
                     </div>
                 </div>
                 <div class="top-search-box pull-right">
