--- a/www/static/template/shop_onserver/contact.html
+++ b/www/static/template/shop_onserver/contact.html
@@ -236,7 +236,7 @@
                                             <span class="flaticon-home-page"></span>
                                         </div>
                                         <div class="text-holder">
-                                            <h5><span>街道</span><br> *** 位置 </h5>
+                                            <h5><span>鸿源大棚联系人:吴经理</span>  </h5>
                                         </div>
                                     </li>
                                     <li>
